--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,6 @@ jobs:
 
       - name: Trigger CodeDeploy Deployment
         run: |
-          echo "Generating AppSpec content..."
           APP_SPEC=$(cat <<EOF
 version: 1
 Resources:
@@ -49,14 +48,14 @@ Resources:
           ContainerName: "strapi"
           ContainerPort: 1337
 EOF
-)
+          )
 
-          ESCAPED_CONTENT=$(echo "$APP_SPEC" | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
+          ESCAPED_APP_SPEC=$(echo "$APP_SPEC" | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
 
           aws deploy create-deployment \
             --application-name "$CODEDEPLOY_APP" \
             --deployment-group-name "$CODEDEPLOY_DEPLOYMENT_GROUP" \
-            --revision revisionType=AppSpecContent,appSpecContent="{\"content\":\"$ESCAPED_CONTENT\"}" \
+            --revision revisionType=AppSpecContent,appSpecContent="{\"content\":\"$ESCAPED_APP_SPEC\"}" \
             --deployment-config-name CodeDeployDefault.ECSAllAtOnce \
             --region "$AWS_REGION"
 
