--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,18 +38,20 @@ jobs:
 
       - name: Trigger CodeDeploy Deployment
         run: |
+          TASK_DEF_ARN=${{ steps.register_taskdef.outputs.taskDefinitionArn }}
+
           APP_SPEC=$(cat <<EOF
 version: 1
 Resources:
   - TargetService:
       Type: AWS::ECS::Service
       Properties:
-        TaskDefinition: "${{ steps.register_taskdef.outputs.taskDefinitionArn }}"
+        TaskDefinition: "$TASK_DEF_ARN"
         LoadBalancerInfo:
           ContainerName: "strapi"
           ContainerPort: 1337
 EOF
-          )
+)
 
           ESCAPED_APP_SPEC=$(echo "$APP_SPEC" | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
 
